feat(auth): Add duplicate mobile number validation and enhance CORS configuration
- Add DuplicateMobileNumberException custom exception for mobile number conflicts
- Implement exception handler for DuplicateMobileNumberException in GlobalExceptionHandler
- Enhance CORS configuration to allow all origins using allowedOriginPatterns
- Add support for PATCH and HEAD HTTP methods in CORS and SecurityConfig
- Expose Authorization and Content-Type headers in CORS responses
- Add health check endpoints (/api/v1/health, /api/v1/ping) to security whitelist
- Set CORS max age to 3600 seconds for preflight request caching
- Update UserRegistrationService documentation to reflect Auth0 migration
- Add mobile number uniqueness validation during user registration
- Improve security configuration with consistent CORS settings across application