@@ -7,6 +7,7 @@ import org.springframework.web.cors.UrlBasedCorsConfigurationSource;
 import org.springframework.web.filter.CorsFilter;
 
 import java.util.Arrays;
+import java.util.List;
 
 @Configuration
 public class CorsConfig {
@@ -15,20 +16,28 @@ public class CorsConfig {
     public CorsFilter corsFilter() {
         CorsConfiguration config = new CorsConfiguration();
         
-        // Allow requests from the Next.js frontend
-        config.setAllowedOrigins(Arrays.asList(
-            "http://localhost:3000",
-            "http://localhost:3001"
-        ));
+        // Allow requests from frontend and same-origin (for Swagger UI)
+        config.setAllowedOriginPatterns(List.of("*")); // Allow all origins
+        
+        // Alternative: Specify exact origins
+        // config.setAllowedOrigins(Arrays.asList(
+        //     "http://localhost:3000",
+        //     "http://localhost:3001",
+        //     "https://elocate-server-m2zi.onrender.com",
+        //     "https://elocate-api-production-2b4c.up.railway.app"
+        // ));
         
         // Allow all HTTP methods
-        config.setAllowedMethods(Arrays.asList("GET", "POST", "PUT", "DELETE", "OPTIONS"));
+        config.setAllowedMethods(Arrays.asList("GET", "POST", "PUT", "DELETE", "OPTIONS", "PATCH", "HEAD"));
         
         // Allow all headers
         config.setAllowedHeaders(Arrays.asList("*"));
         
         // Allow credentials
         config.setAllowCredentials(true);
+        
+        // Expose headers
+        config.setExposedHeaders(Arrays.asList("Authorization", "Content-Type"));
         
         // Set max age for preflight requests
         config.setMaxAge(3600L);
